vcluster_versioned_docs/version-0.27.0/_partials/config/privateNodes/autoUpgrade.mdx

<details className="config-field" data-expandable="true">
<summary>

## `autoUpgrade` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoUpgrade}

AutoUpgrade holds configuration for auto upgrade.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#autoUpgrade-enabled}

Enabled defines if auto upgrade should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `image` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoUpgrade-image}

Image is the image for the auto upgrade pod started by vCluster. If empty defaults to the controlPlane.statefulSet.image.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `imagePullPolicy` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoUpgrade-imagePullPolicy}

ImagePullPolicy is the policy how to pull the image.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `nodeSelector` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoUpgrade-nodeSelector}

NodeSelector is the node selector for the auto upgrade. If empty will select all worker nodes.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `bundleRepository` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoUpgrade-bundleRepository}

BundleRepository is the repository to use for downloading the Kubernetes bundle. Defaults to https://github.com/loft-sh/kubernetes/releases/download

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `binariesPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoUpgrade-binariesPath}

BinariesPath is the base path for the kubeadm binaries. Defaults to /usr/local/bin

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `cniBinariesPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#autoUpgrade-cniBinariesPath}

CNIBinariesPath is the base path for the CNI binaries. Defaults to /opt/cni/bin

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `concurrency` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">integer</span> <span className="config-field-default">1</span> <span className="config-field-enum"></span> {#autoUpgrade-concurrency}

Concurrency is the number of nodes that can be upgraded at the same time.

</summary>



</details>


</details>
